corpus/cpp/template/case-05/snapshots/gcc15/render.verbose.txt
note: some compiler details were not fully structured; original diagnostics are preserved
error: template instantiation failed
--> src/main.cpp:5:12
help: start from the first user-owned template frame and match template arguments
why: src/main.cpp:5:12: error: no matching function for call to 'combine(int, const char [2])'
| src/main.cpp:5:12
|     combine(1, "x");
|            ^
while instantiating:
  - src/main.cpp:2:6 template argument deduction/substitution failed:
  - src/main.cpp:5:12 deduced conflicting types for parameter 'T' ('int' and 'const char*')
raw:
  src/main.cpp:5:12: error: no matching function for call to 'combine(int, const char [2])'
debug: rule_id=rule.family.template.structured_or_message
debug: matched_conditions=context=template_instantiation
error: template instantiation failed
--> src/main.cpp:5:5
help: start from the first user-owned template frame and match template arguments
why: no matching function for call to 'combine(int, const char [2])'
| src/main.cpp:5:5
|     combine(1, "x");
|     ^
while instantiating:
  - src/main.cpp:2:6 candidate 1: 'template<class T> void combine(T, T)'
  - src/main.cpp:2:6 template argument deduction/substitution failed:
  - src/main.cpp:5:5 deduced conflicting types for parameter 'T' ('int' and 'const char*')
debug: rule_id=rule.family.template.structured_or_message
debug: matched_conditions=context=template_instantiation, child_note_kind=template_context, child_message_contains=template, child_message_contains=deduction/substitution, child_message_contains=deduced conflicting, phase=instantiate
raw: rerun with --formed-profile=raw_fallback to inspect the original compiler output